src/objects/CD_Cost_TakeDown__c.object
<CustomObject>
    <fields>
        <fullName>CD_Category_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Category Managers</label>
        <referenceTo>CD_Category_Managers__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Category</label>
        <referenceTo>CD_Category__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_ExternalKey__c</fullName>
        <formula>CD_GCL__r.Name&amp;&apos;-&apos;&amp;CD_Category_Manager__r.Name&amp;&apos;-&apos;&amp;CD_Category__r.Name&amp;&apos;-&apos;&amp;CD_SubCategory1__r.Name&amp;&apos;-&apos;&amp; CD_Subcategory2__r.Name &amp;&apos;-&apos;&amp; CD_Subcategory3__r.Name &amp;&apos;-&apos;&amp;CD_Items__r.Item_Number__c</formula>
        <label>CD ExternalKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_GCL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCL</label>
        <referenceTo>CD_GCL__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Item_categories__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Item Categories</label>
        <referenceTo>CD_Item_Categories__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Items</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_SubCategory1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Subcategory1</label>
        <referenceTo>CD_Subcategory1__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Subcategory2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Subcategory2</label>
        <referenceTo>CD_Subcategory2__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Subcategory3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Subcategory3</label>
        <referenceTo>CD_Subcategory3__c</referenceTo>
        <relationshipLabel>CD_Cost_TakeDowns</relationshipLabel>
        <relationshipName>CD_Cost_TakeDowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TD_Criteria__c</fullName>
        <label>TD Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>By Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TD_Value__c</fullName>
        <label>TD Value</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>CD_Cost_TakeDown</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSTTD-{0000}</displayFormat>
        <label>CD_Cost_TakeDown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD_Cost_TakeDowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>